# rustTut

./: Cargo.toml  ClaudeSimReport.md  README.md  behavior_example.yaml  cppClient.md  designSim.md  todo.md
bevy_client/: Cargo.toml
bevy_client/src/: main.rs
demo/: Cargo.toml  README.md  client.py  client_curses.py  pyClient.md  run_demo.sh  run_tui.sh  simDemo.md
demo/src/: main.rs
src/: lib.rs  main.rs
tutorials/tut00/: tutorial00.md
tutorials/tut01/: tut01.rs  tut01_complete.rs  tutorial01.md
tutorials/tut02/: tut02.rs  tut02_complete.rs  tutorial02.md
tutorials/tut03/: tut03.rs  tut03_complete.rs  tutorial03.md
tutorials/tut04/: tut04.rs  tut04_complete.rs  tutorial04.md
tutorials/tut05/: tut05.rs  tut05_complete.rs  tutorial05.md
tutorials/tut06/: tut06.rs  tut06_complete.rs  tutorial06.md
tutorials/tut07/: tut07.rs  tut07_complete.rs  tutorial07.md
tutorials/tut08/: tut08.rs  tut08_complete.rs  tutorial08.md
tutorials/tut09/: tut09.rs  tut09_complete.rs  tutorial09.md
tutorials/tut10/: tut10.rs  tut10_complete.rs  tutorial10.md
